Bug 66059 - Missing images in Firefox [SNA]
Summary: Missing images in Firefox [SNA]
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-22 22:50 UTC by Clemens Eisserer
Modified: 2013-06-24 10:56 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
screenshot of firefox (181.79 KB, image/jpeg)
2013-06-22 22:50 UTC, Clemens Eisserer
no flags Details
Xorg log (29.60 KB, text/plain)
2013-06-23 07:39 UTC, Daniel Micay
no flags Details
another xorg.log (41.45 KB, text/plain)
2013-06-23 08:27 UTC, Clemens Eisserer
no flags Details
sample pdf document (211.55 KB, text/plain)
2013-06-23 08:33 UTC, Clemens Eisserer
no flags Details

Description Clemens Eisserer 2013-06-22 22:50:05 UTC
Created attachment 81233 [details]
screenshot of firefox

I've just tried 2.21.10 on my SandyBridge-Notebook and there seem to be a few things off:

- Many images in firefox are simply rendered black
- Scrolling in some documents results in white area with AcroRead (that proprietary thing - as evince devs really tried hard to make evince as ugly as possible)
Comment 1 Chris Wilson 2013-06-23 06:12:29 UTC
Can you please attach your Xorg.log so that I can narrow down the hardware and software likely required to reproduce? Firefox is still behaving on every machine I use, and I'm currently building an old chroot to run acroread.
Comment 2 Chris Wilson 2013-06-23 06:24:04 UTC
I'm not seeing any failure in acroread on the first machine I installed it on either (a SNB).
Comment 3 Chris Wilson 2013-06-23 06:25:25 UTC
Any chance you can also check the reproduction steps for anything peculiar I need to recreate?
Comment 4 Daniel Micay 2013-06-23 07:39:52 UTC
Created attachment 81255 [details]
Xorg log

I can consistently reproduce this on Arch Linux x86_64 (firefox 21, linux 3.9.7, xorg 1.14.1, xf86-video intel 2.21.10) with SNA acceleration. For now I've just gone back to UXA acceleration.
Comment 5 Daniel Micay 2013-06-23 07:41:18 UTC
By the way, here's the bug in our bug tracker, in case some useful information is posted there: https://bugs.archlinux.org/task/35896
Comment 6 Clemens Eisserer 2013-06-23 08:27:56 UTC
Created attachment 81257 [details]
another xorg.log
Comment 7 Clemens Eisserer 2013-06-23 08:29:03 UTC
I see this with an official build of firefox-21 on fedora-19 (+ updates testing) and kernel-3.10.0.rc6.
Comment 8 Clemens Eisserer 2013-06-23 08:32:38 UTC
Forgot to mention, I use XFCE. This bug is reproduceable with and without compositor.

The acrobat-reader bug happens with acroread-9.5.3 and the attached document when scrolling too fast: http://youtu.be/OHMaEihUN1g
Comment 9 Clemens Eisserer 2013-06-23 08:33:28 UTC
Created attachment 81258 [details]
sample pdf document
Comment 10 Chris Wilson 2013-06-23 10:02:13 UTC
Time to update my fedora laptop to f19 and see what breaks...

Daniel, can you ask on the arch bug whether there are any machines affected that are not SNB/IVB?
Comment 11 Chris Wilson 2013-06-23 12:10:14 UTC
Now running f19 (firefox 21, acroread 9.5.5, kernel 3.9.6, -intel.git) on a SNB i5-2520qm and not yet encountering any issues under gnome-shell or xfce4. Meh.

Suggestions?
Comment 12 Muflone 2013-06-23 12:31:31 UTC
I can reproduce it on Arch Linux with kernel 3.9.7 and both stock intel 2.21.10 or intel-git with SNA acceleration. When reverting to UXA everything is properly rendered. The hardware used is an i5 2500K.

It happens here in Mozilla Firefox and Mozilla Thunderbird while doesn't happen in Epiphany browser or any other application that I used today.
Comment 13 Laurent carlier 2013-06-23 12:39:59 UTC
(In reply to comment #12)
> I can reproduce it on Arch Linux with kernel 3.9.7 and both stock intel
> 2.21.10 or intel-git with SNA acceleration. When reverting to UXA everything
> is properly rendered. The hardware used is an i5 2500K.
> 
> It happens here in Mozilla Firefox and Mozilla Thunderbird while doesn't
> happen in Epiphany browser or any other application that I used today.

You can always try to bisect to see what commit introduce the regression
Comment 14 Chris Wilson 2013-06-23 15:51:58 UTC
Is anybody seeing this on a 32-bit build?
Comment 15 Chris Wilson 2013-06-23 17:47:07 UTC
Yup. Booted a live f19 64-bit image, and the images disappeared. Sadly, so did the session, so time to try again.
Comment 16 Daniel Micay 2013-06-23 20:55:40 UTC
The problem is gone with Firefox 23 (Aurora), but I think it's likely to still be a bug in the driver.
Comment 17 Clemens Eisserer 2013-06-23 21:11:52 UTC
I'll try to bisect it tomorrow...
Comment 18 Clemens Eisserer 2013-06-23 21:50:51 UTC
Ok, was able to bisect it sonner:

53c113c3cc2f8527debc185f0819139ca8637637 is the first bad commit
commit 53c113c3cc2f8527debc185f0819139ca8637637
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Jun 21 19:27:24 2013 +0100

    sna: Allow PutImage to write inplace using manual tiling
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

:040000 040000 a3ba69294e46d078d94dd5f6ad976ec6eaccbfb2 87e4890f2c7e21bf8fbf9c7237a91423b8bd1e76 M	src
Comment 19 Clemens Eisserer 2013-06-23 21:51:39 UTC
just verfied, without this commit both issues (FF and acrobat reader) are gone :)
Comment 20 Chris Wilson 2013-06-24 10:56:52 UTC
commit 77ddadf0ec6b867a0638660bf06c82ad31577795
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Jun 23 22:01:12 2013 +0100

    sna: Clear 'clear' hint upon uploading into tiled
    
    Fixes regression from
    commit 53c113c3cc2f8527debc185f0819139ca8637637 [2.21.10]
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Fri Jun 21 19:27:24 2013 +0100
    
        sna: Allow PutImage to write inplace using manual tiling
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=66059
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.