sna: Clear 'clear' hint upon uploading into tiled

Fixes regression from
commit 53c113c3cc2f8527debc185f0819139ca8637637 [2.21.10]
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Jun 21 19:27:24 2013 +0100

    sna: Allow PutImage to write inplace using manual tiling

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=66059
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>